--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <button class="accordion"><li>People</li></button>
       <div class="panel">
         <p>
-          <img src="assets/favicon.ico" style="max-height: .75em; max-width: .75em;">
+          <img src="assets/images/favicon.ico" style="max-height: .75em; max-width: .75em;">
           <a>Console Randomizer</a>
           <br><br>
           <a href="" target="blank">Firstname Lastname</a> (pronouns)<br>
@@ -228,7 +228,7 @@
           Set Up Are.na CMS
           <br><br>
           FOR NEXT CLASS:<br>
-          TBD
+          <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="blank">Sign up</a>  for WIP Critiques<br>
         </p>
       </div>
 
@@ -236,18 +236,30 @@
       <div class="panel">
           <p>
             IN CLASS:<br>
-            <a href="" target="blank">JS 1: Events, Functions</a>
+            <a href="" target="blank">JS 1: Console, Variables, Events</a>
             <br><br>
             - break -
             <br><br>
             <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="blank">WIP Critiques</a>
             <br><br>
             FOR NEXT CLASS:<br>
-            Content Critique
+            <a href="" download>JS Homework</a> (optional)
           </p>
       </div>
 
-      <button class="accordion"><li>Class 10, Apr 6</li></button>
+      <button class="accordion">Class 10, Apr 6<li></li></button>
+      <div class="panel">
+        <p>
+          IN CLASS:<br>
+          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Discussion</a><br>
+          Guests: <a href="https://eric.young.li/" target="blank">Eric Li</a> and <a href="https://nazli-ercan.com/" target="blank">Nazlı Ercan</a>
+          <br><br>
+          FOR NEXT CLASS:<br>
+          Content Critique<br>
+        </p>
+      </div>
+
+      <button class="accordion"><li>Class 11, Apr 13</li></button>
       <div class="panel">
         <p>
           IN CLASS:<br>
@@ -257,20 +269,7 @@
           FOR NEXT CLASS:<br>
           Read <a href="https://medium.com/s/user-friendly/why-im-done-saying-user-user-experience-and-ux-in-2019-4fdfc6b7de23" target="blank">As a Designer, I Refuse to Call People ‘Users’</a>, Adam Lefton<br>
           <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Reflections</a><br>
-          Exercise: Interview Review
-        </p>
-      </div>
-
-      <button class="accordion"><li>Class 11, Apr 13</li></button>
-      <div class="panel">
-        <p>
-          IN CLASS:<br>
-          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Discussion</a><br>
-          Guests: <a href="https://eric.young.li/" target="blank">Eric Li</a> and <a href="https://nazli-ercan.com/" target="blank">Nazlı Ercan</a>
-          <br><br>
-          FOR NEXT CLASS:<br>
-          10 Questions<br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="blank">Web Share</a><br>
+          Interview Review and 10 Questions
         </p>
       </div>
 
@@ -278,17 +277,16 @@
       <div class="panel">
         <p>
           IN CLASS:<br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="blank">Web Share</a><br>
-          10 Questions<br>
+          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Discussion</a><br>
+          Interview Review and 10 Questions<br>
           <br><br>
           - break -
           <br><br>
-          TBD
+          JS2: Functions, Arrays, Loops
           <br><br>
           FOR NEXT CLASS:<br>
           Walk and Transcription<br>
-          Read <a href="https://frankchimero.com/blog/2015/the-webs-grain/" target="blank">The Web's Grain</a>, Frank Chimero<br>
-          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Reflections</a><br>
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="blank">Web Share</a><br>
         </p>
       </div>
 
@@ -296,13 +294,15 @@
       <div class="panel">
         <p>
           IN CLASS:<br>
-          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Discussion</a><br>
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="blank">Web Share</a><br>
           <br><br>
           - break -
           <br><br>
           TBD
           <br><br>
           FOR NEXT CLASS:<br>
+          Read <a href="https://frankchimero.com/blog/2015/the-webs-grain/" target="blank">The Web's Grain</a>, Frank Chimero<br>
+          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Reflections</a><br>
           <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="blank">Sign up</a>  for WIP Critiques<br>
         </p>
       </div>
@@ -311,7 +311,7 @@
       <div class="panel">
         <p>
           IN CLASS:<br>
-          TBD
+          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Discussion</a><br>
           <br><br>
           - break -
           <br><br>
