--- a/index.html
+++ b/index.html
@@ -278,11 +278,11 @@
         <p>
           IN CLASS:<br>
           <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Discussion</a><br>
-          Interview Review and 10 Questions<br>
+          Interview Review and 10 Questions
           <br><br>
           - break -
           <br><br>
-          JS2: Functions, Arrays, Loops
+          JS 2: Operatorsm, Functions
           <br><br>
           FOR NEXT CLASS:<br>
           Walk and Transcription<br>
@@ -294,11 +294,11 @@
       <div class="panel">
         <p>
           IN CLASS:<br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="blank">Web Share</a><br>
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="blank">Web Share</a>
           <br><br>
           - break -
           <br><br>
-          TBD
+          JS 3: Arrays, Loops
           <br><br>
           FOR NEXT CLASS:<br>
           Read <a href="https://frankchimero.com/blog/2015/the-webs-grain/" target="blank">The Web's Grain</a>, Frank Chimero<br>
@@ -311,7 +311,7 @@
       <div class="panel">
         <p>
           IN CLASS:<br>
-          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Discussion</a><br>
+          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Discussion</a>
           <br><br>
           - break -
           <br><br>
