--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           </p>
       </div>
 
-      <button class="accordion">Class 10, Apr 6<li></li></button>
+      <button class="accordion"><li>Class 10, Apr 6</li></button>
       <div class="panel">
         <p>
           IN CLASS:<br>
@@ -255,9 +255,10 @@
           Guests: <a href="https://eric.young.li/" target="blank">Eric Li</a> and <a href="https://nazli-ercan.com/" target="blank">Nazlı Ercan</a>
           <br><br>
           FOR NEXT CLASS:<br>
-          Content Critique<br>
+          Content Critique
         </p>
       </div>
+
 
       <button class="accordion"><li>Class 11, Apr 13</li></button>
       <div class="panel">
