--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           Exercise: Top 10
           <br><br>
           FOR NEXT CLASS:<br>
-          Web Share<br>
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
           <a href="" target="_blank">Prepare Walk Presentations</a><br>
           <a href="" download>HTML Homework</a> (optional)
         </p>
@@ -141,13 +141,13 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           IN CLASS:<br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share</a><br>
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
           <a href="" target="_blank">Walk Presentations</a><br>
           Exercise: <a href="" target="_blank">Navigation</a>
           <br><br>
           - break -
           <br><br>
-          <a href="" target="_blank">CSS 1: Style, Class, ID</a><br>
+          <a href="" target="_blank">CSS 1: Style, Selector, Class, ID</a><br>
           Exercise: Inspector
           <br><br>
           FOR NEXT CLASS:<br>
@@ -170,7 +170,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="_blank">WIP Critiques</a>
           <br><br>
           FOR NEXT CLASS:<br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share</a><br>
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
           <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="_blank">Sign up</a>  for WIP Critiques<br>
           <a href="" download>CSS Positioning Homework</a> (optional)
         </p>
@@ -180,7 +180,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           IN CLASS:<br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share</a><br>
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
           <a href="" target="_blank">CSS 3: Flexbox and Media Query</a>
           <br><br>
           - break -
@@ -217,7 +217,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           FOR NEXT CLASS:<br>
           <a href="" target="_blank">Midterm Survey</a><br>
           Collection: Gather 40 Items<br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share</a><br>
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
         </p>
       </div>
 
@@ -234,7 +234,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           IN CLASS:<br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share</a><br>
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
           Collection Presentations
           <br><br>
           - break -
@@ -301,7 +301,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <br><br>
           FOR NEXT CLASS:<br>
           Walk and Transcription<br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share</a><br>
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
         </p>
       </div>
 
@@ -309,7 +309,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           IN CLASS:<br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share</a>
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
           <br><br>
           - break -
           <br><br>
