--- a/index.html
+++ b/index.html
@@ -866,7 +866,10 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
 
   <footer>
     The web is forever growing and changing, including this website.
-    Thank you to Simone Cutrí, Luiza Dale, Brendan Griffiths, Rosa McElheny, Aidan Quinlan, Steven Rodriguez, Mindy Seu, and many others who helped shape this class and continue to weave a generous web for all. Special thank you to our guests Herdimas Anggara, Nazlı Ercan, and Eric Li.
+
+    Thank you to our guests Herdimas Anggara, Nazlı Ercan, and Eric Li.
+
+    Special thank you to Evan Chang, Simone Cutrí, Luiza Dale, Brendan Griffiths, Rosa McElheny, Aidan Quinlan, Steven Rodriguez, Mindy Seu, Mianwei Wang, and many others who helped shape this class and continue to weave a generous web for all.
     <br><br>
     Last Updated: Sun Dec 5, 2021
   </footer>
