--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           - Exercise: Daisy Chain
           <br><br>
           <span class="nextclass">
-            FOR NEXT CLASS:<br>
+            NEXT CLASS:<br>
             - Read <a href="" target="_blank">Handmade Web</a>, J.R. Carpenter<br>
             - Read <a href="https://www.bloomberg.com/graphics/2015-paul-ford-what-is-code/" target="_blank">What is Code?</a>, Paul Ford<br>
             - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
@@ -137,7 +137,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           - Exercise: Top 10
           <br><br>
           <span class="nextclass">
-            FOR NEXT CLASS:<br>
+            NEXT CLASS:<br>
             - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
             - <a href="" download>HTML Practice</a> (optional)
             <br><br>
@@ -161,13 +161,14 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           - Exercise: Inspector
           <br><br>
           <span class="nextclass">
-            FOR NEXT CLASS:<br>
+            NEXT CLASS:<br>
             - Read <a href="assets/readings/michaelson.pdf" target="_blank">On Exactitude in Science</a>, Dan Michaelson<br>
+            - Read <a href="https://unbag.net/end/black-gooey-universe" target="_blank">Black Gooey Universe</a>, Amerian Artist<br>
             - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a><br>
             - <a href="" download>CSS Practice</a> (optional)
             <br><br>
             Project:<br>
-            - Path Sketches (2-3 directions).
+            - Sketch 2-3 directions
           </span>
         </p>
       </div>
@@ -184,7 +185,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           - Path Sketches
           <br><br>
           <span class="nextclass">
-            FOR NEXT CLASS:<br>
+            NEXT CLASS:<br>
             - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
             - <a href="" download>CSS Positioning Practice</a> (optional)
             <br><br>
@@ -206,11 +207,12 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           - <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="_blank">WIP Critiques</a>
           <br><br>
           <span class="nextclass">
-            FOR NEXT CLASS:<br>
+            NEXT CLASS:<br>
             <a href="" download>Flexbox Practice</a> (optional)
             <br><br>
             Project:<br>
             - <a href="" target="_blank">Path Critique</a><br>
+            <em>For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The person preceding your name on the list will navigate your Path before we critique it as a class.</em>
           </span>
         </p>
       </div>
@@ -219,13 +221,18 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           IN CLASS:<br>
-          Introduce Project 2: Archive<br>
-          <a href="" target="_blank">Path Critique</a>
+          - Introduce Project 2: Archive<br>
+          - <a href="" target="_blank">Path Critique</a>
           <br><br>
-          FOR NEXT CLASS:<br>
-          Read <a href="assets/readings/leguin.pdf" target="_blank">The Carrier Bag Theory of Fiction</a>, Ursula K. Le Guin<br>
-          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a><br>
-          <a href="" target="_blank">Collection Presentation</a>
+          <span class="nextclass">
+            NEXT CLASS:<br>
+            - Read <a href="assets/readings/leguin.pdf" target="_blank">The Carrier Bag Theory of Fiction</a>, Ursula K. Le Guin<br>
+            - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
+            <br><br>
+            Project:<br>
+            - Begin your collection of 40 items<br>
+            <em>Choose something from your walk as the focus. Your collection will be housed on a new Are.na channel you create and should consist of external texts, images, videos, sounds, links, etc.</em>
+          </span>
         </p>
       </div>
 
@@ -233,20 +240,25 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           IN CLASS:<br>
-          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
-          Guest: <a href="https://herdimasanggara.com/" target="_blank">Herdimas Anggara</a>
+          - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
+          - Guest Visit: <a href="https://herdimasanggara.com/" target="_blank">Herdimas Anggara</a>
           <br><br>
-          FOR NEXT CLASS:<br>
-          <a href="" target="_blank">Midterm Survey</a><br>
-          Collection: Gather 40 Items<br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
+          <span class="nextclass">
+            NEXT CLASS:<br>
+            - <a href="" target="_blank">Midterm Survey</a><br>
+            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
+            <br><br>
+            Project:<br>
+            - Collection Presentation<br>
+            <em>Prepare to share your collection including a brief text introducing the theme and 5 items.</em>
+          </span>
         </p>
       </div>
 
       <button class="accordion"><li>Spring Break, Mar 14–20</li></button>
       <div class="panel">
         <p>
-          No class this week. Try to make some time for yourself.
+          ✳ No class this week. Try to make some time for yourself. ✳
           <br><br>
           <img src="assets/images/springbreak.jpg">
         </p>
@@ -256,15 +268,22 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           IN CLASS:<br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
-          Collection Presentations
+          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
+          - Collection Presentations and Swap
           <br><br>
           ✳ break ✳
           <br><br>
-          Set Up Are.na CMS
+          - Set Up Are.na CMS
           <br><br>
-          FOR NEXT CLASS:<br>
-          <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="_blank">Sign up</a>  for WIP Critiques<br>
+          <span class="nextclass">
+            NEXT CLASS:<br>
+            - Read <a href="https://www.tate.org.uk/research/publications/tate-papers/09/perspectives-negotiating-the-archive" target="_blank">Perspectives: Negotiating the Archive</a>, Sue Breakell<br>
+            - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
+            <br><br>
+            Project:<br>
+            - Sketch 2-3 directions<br>
+            <em>Prepare to share 2-3 possible directions for your Archive including ways for visitors to filter and navigate your collection.</em>
+          </span>
         </p>
       </div>
 
@@ -272,14 +291,18 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
           <p>
             IN CLASS:<br>
-            <a href="" target="_blank">JS 1: Console, Variables, Events</a>
+            - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
+            - <a href="" target="_blank">JS 1: Console, Variables, Events</a>
             <br><br>
             ✳ break ✳
             <br><br>
-            <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="_blank">WIP Critiques</a>
+            - Archive Sketches
             <br><br>
-            FOR NEXT CLASS:<br>
-            <a href="" download>JS Practice</a> (optional)
+            <span class="nextclass">
+              NEXT CLASS:<br>
+              - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
+              - <a href="" download>JS Practice</a> (optional)
+            </span>
           </p>
       </div>
 
@@ -287,11 +310,14 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           IN CLASS:<br>
-          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
-          Guests: <a href="https://eric.young.li/" target="_blank">Eric Li</a> and <a href="https://nazli-ercan.com/" target="_blank">Nazlı Ercan</a>
+          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
+          - Guest Visit: <a href="https://eric.young.li/" target="_blank">Eric Li</a> and <a href="https://nazli-ercan.com/" target="_blank">Nazlı Ercan</a>
           <br><br>
-          FOR NEXT CLASS:<br>
-          Archive Critique
+          <span class="nextclass">
+            NEXT CLASS:<br>
+            - Archive Critique<br>
+            <em>For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The original creator of your site's collection will navigate the site then we will critique it as a class.</em>
+          </span>
         </p>
       </div>
 
@@ -300,13 +326,18 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           IN CLASS:<br>
-          Introduce Project 3: Query<br>
-          Archive Critique
+          - Introduce Project 3: Query<br>
+          - Archive Critique
           <br><br>
-          FOR NEXT CLASS:<br>
-          Read <a href="https://medium.com/s/user-friendly/why-im-done-saying-user-user-experience-and-ux-in-2019-4fdfc6b7de23" target="_blank">As a Designer, I Refuse to Call People ‘Users’</a>, Adam Lefton<br>
-          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a><br>
-          Interview Review and 10 Questions
+          <span class="nextclass">
+            NEXT CLASS:<br>
+            - Read <a href="https://medium.com/s/user-friendly/why-im-done-saying-user-user-experience-and-ux-in-2019-4fdfc6b7de23" target="_blank">As a Designer, I Refuse to Call People ‘Users’</a>, Adam Lefton<br>
+            <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
+            <br><br>
+            Project:<br>
+            - Interview Review<br>
+            - 10 Questions
+          </span>
         </p>
       </div>
 
@@ -314,16 +345,20 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           IN CLASS:<br>
-          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
-          Interview Review and 10 Questions
+          - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
+          - Interview Review and 10 Questions
           <br><br>
           ✳ break ✳
           <br><br>
-          JS 2: Operatorsm, Functions
+          - JS 2: Operators, Functions
           <br><br>
-          FOR NEXT CLASS:<br>
-          Walk and Transcription<br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
+          <span class="nextclass">
+            NEXT CLASS:<br>
+            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
+            <br><br>
+            Project:<br>
+            - Walk and Transcription<br>
+          </span>
         </p>
       </div>
 
@@ -331,16 +366,20 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           IN CLASS:<br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
+          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
           <br><br>
           ✳ break ✳
           <br><br>
-          JS 3: Arrays, Loops
+          - JS 3: Arrays, Loops
           <br><br>
-          FOR NEXT CLASS:<br>
-          Read <a href="https://frankchimero.com/blog/2015/the-webs-grain/" target="_blank">The Web's Grain</a>, Frank Chimero<br>
-          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a><br>
-          <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="_blank">Sign up</a>  for WIP Critiques<br>
+          <span class="nextclass">
+            NEXT CLASS:<br>
+            - Read <a href="https://frankchimero.com/blog/2015/the-webs-grain/" target="_blank">The Web's Grain</a>, Frank Chimero<br>
+            - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
+            <br><br>
+            Project:<br>
+            - <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="_blank">Sign up</a> for WIP Critiques<br>
+          </span>
         </p>
       </div>
 
@@ -348,14 +387,17 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           IN CLASS:<br>
-          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a>
+          - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a>
           <br><br>
           ✳ break ✳
           <br><br>
-          <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="_blank">WIP Critiques</a>
+          - <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="_blank">WIP Critiques</a>
           <br><br>
-          FOR NEXT CLASS:<br>
-          Query Critique
+          <span class="nextclass">
+            NEXT CLASS:<br>
+            - Query Critique<br>
+            <em>For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The two people after your name on the list will navigate the two states of your website. If you chose print as one of your states, come prepared with it fully printed.</em>
+          </span>
         </p>
       </div>
 
@@ -405,7 +447,8 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             - Have at least 10 separate pages/stops.<br>
             - Have at least 10 images, gifs, and/or videos (can be hosted on one of the platforms).<br>
             - Traverses 3 different platforms.<br>
-            - Have a clear end.
+            - Have a clear end.<br>
+            - Have a favicon.
             <br><br>
             FINAL CRITIQUE:<br>
             For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The person preceding your name on the list will navigate your Path before we critique it as a class.
@@ -441,7 +484,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <p>
             Examine how we sift through the web for content that helps us learn and connect. In this vast repository of information, what kind of systems of organization bring forward items of importance or moments of discovery? What content is de-prioritized or further obscured?
             <br><br>
-            Begin a collection of 40 things using something from your walk as the focus. Your collection will be housed on Are.na. It should consist of external texts, images, videos, sounds, links, etc. and feel cohesive.
+            Begin a collection of 40 things using something from your walk as the focus. Your collection will be housed on a new Are.na channel you create and should consist of external texts, images, videos, sounds, links, etc.
             <br><br>
             You will then share your collection and 5 items from it with your class in a brief presentation. Afterwards, you will swap your collection with a classmate and add 10 additional items to your new collection.
             <br><br>
@@ -461,10 +504,11 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             - Include a brief text introducing the idea behind your collection.<br>
             - Be intentional with your organization.<br>
             - Include an index of some kind.<br>
-            - Flexible with consideration that it can grow in the future.
+            - Flexible with consideration that it can grow in the future.<br>
+            - Include a favicon.
             <br><br>
             FINAL CRITIQUE:<br>
-            For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The original creator of your site's collection will navigate the site before we critique it as a class.
+            For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The original creator of your site's collection will navigate the site then we will critique it as a class.
             <br><br>
             CONSIDERATIONS:<br>
             - Does a narrative begin to form?<br>
@@ -475,7 +519,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             SCHEDULE:<br>
             - Class 6, Mar 2: Introduce Project<br>
             - Class 8, Mar 23: Collection Presentations<br>
-            - Class 9, Mar 30: WIP Critiques<br>
+            - Class 9, Mar 30: Archive Sketches<br>
             - Class 11, Apr 13: Project Critique
           </p>
         </div>
@@ -524,7 +568,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             SCHEDULE:<br>
             - Class 11, Apr 13: Introduce Project<br>
             - Class 12, Apr 20: Interview Review and 10 Questions<br>
-            - Class 13, Apr 27: WIP Critiques<br>
+            - Class 13, Apr 27: Walk and Transcription<br>
             - Class 14, May 4: WIP Critiques<br>
             - Class 15 (Final), May 11: Project Critique
           </p>
