--- a/index.html
+++ b/index.html
@@ -909,12 +909,12 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         </p>
       </div>
 
-      <!-- <button class="accordion"><li>Land Acknowledgement</li></button>
+      <button class="accordion"><li>Land Acknowledgement</li></button>
       <div class="panel">
         <p>
-          This class respectfully acknowledges
+          We are gathered on the unceded land of the Lenape peoples. We acknowledge the long and complex history that has brought us to occupy this land, and we seek to evaluate the ongoing effects of colonialism and our participation in that process. We honor the Lenape community and other Indigenous peoples of this land before us, today, and the generations to come.
         </p>
-      </div> -->
+      </div>
 
       <button class="accordion"><li>Instructor Information</li></button>
       <div class="panel">
