--- a/index.html
+++ b/index.html
@@ -644,11 +644,45 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         <button class="accordion"><li>Top 10</li></button>
         <div class="panel">
           <p>
-            To help us get to know each other and gain familiarity with HTML, create a list of 10 things.
+            Compile a personal top 10 list. These should be ten things that inspire you, that you're interested in right now, or that make you want to be an artist/designer. It could have a theme, or no theme. It's a self-portrait in the form of a list. We'll use this as a way to introduce each other, and to get started coding.
             <br><br>
-            1. Use ordered list, unordered list, and list item.<br>
-            2. Each item in your list should link out to somewhere else.<br>
-            3. Your list can have a theme or not.
+            Once you have your list, make a webpage for your top 10. Use this as a chance to experiment with a variety of HTML tags, and to see what kind of layouts are possible with just HTML. You might want to make more than one version...
+            <br><br>
+            Some tags you might want to use:
+            <code>&lt;ol&gt;</code> aka ordered list. This makes a numbered list of items. Use it like this:
+    <pre>
+      &lt;ol&gt;
+        &lt;li&gt;
+            My favorite color is blue.
+        &lt;/li&gt;
+        &lt;li&gt;
+            My second favorite color is light blue.
+        &lt;/li&gt;
+      &lt;/ol&gt;
+    </pre>
+          </p>
+          <p>
+            <code>&lt;a&gt;</code> Use an anchor tag to make a link.<br>
+            For an external link, include the <code>https://</code><br>
+    <pre>
+      &lt;a href="https://www.youtube.com/watch?v=XJcXjUB0yqY"&gt;Watch my favorite music video on Youtube.&lt;/a&gt;
+    </pre>
+          <p>
+            To link to another page on your own website, just use the filepath:
+    <pre>
+      &lt;a href="my-favorite-music-video.html"&gt;Read my explanation of my favorite music video&lt;/a&gt;
+    </pre>
+          </p>
+          <p>
+            Use an image tag to insert an image. Replace myimage.png with your image's file name.<br>
+            <code>&lt;img src="myimage.png"&gt;</code>
+            <br><br>
+            <code>&lt;br&gt;</code> creates a line break in text.<br>
+            <code>&amp;nbsp</code> will add a space to your document. It stands for non-breaking space, and you can use it to position elements.<br>
+            <br><br>
+            <a href="https://www.w3schools.com/tags/default.asp">Browse this list of every tag.</a>
+            <br><br>
+            <em>This exercise was created by Rosa McElheny.</em>
           </p>
         </div>
 
@@ -731,8 +765,8 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           - <a href="https://frankchimero.com/blog/2015/the-webs-grain/" target="_blank">The Web's Grain</a>, Frank Chimero
           <br><br>
           Optional:<br>
-          - <a href="" target="_blank">My House Is..</a>, Laurel Schwulst<br>
-          - <a href="" target="_blank">Poetic Computing</a>, Taeyoon Choi<br>
+          - <a href="https://thecreativeindependent.com/essays/laurel-schwulst-my-website-is-a-shifting-house-next-to-a-river-of-knowledge-what-could-yours-be/" target="_blank">My website is a shifting house next to a river of knowledge. What could yours be?</a>, Laurel Schwulst<br>
+          - <a href="http://avant.org/project/hello-world/" target="_blank">Hello, World!</a>, Taeyoon Choi<br>
         </p>
       </div>
 
