--- a/index.html
+++ b/index.html
@@ -751,6 +751,31 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         </p>
       </div>
 
+      <button class="accordion"><li>HTML Boiler Plate</li></button>
+      <div class="panel">
+        <p>
+          Boiler plate is a term for unchanging, commonly used, or required text/information/structure. In coding, boiler plates are often used as templates to speed up programming. Here is a useful boiler plate for an HTML document that includes all necessary information for initiating an HTML document, along with some other helpful lines. The charset line specifies the character encoding for the HTML document as unicode. The viewport line assists in preparing the document for mobile-friendly responsiveness. And the stylesheet line generates a commonly used link to an external stylesheet — make sure to rename the filename to your stylesheet's name or remove the line if you don't need it!
+          <br><br>
+          However! I would recommend continuing to type this out by hand until each element is locked away in your memory instead of just copy-pasting every time!
+        </p>
+    <pre>
+      &lt;html lang="en"&gt;
+        &lt;head&gt;
+          &lt;title&gt;TITLE&lt;/title&gt;
+          &lt;meta charset="utf-8"&gt;
+          &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+          &lt;link rel="stylesheet" href="style.css"&gt;
+        &lt;/head&gt;
+
+        &lt;body&gt;
+        &lt;/body&gt;
+      &lt;/html&gt;
+    </pre>
+        <p>
+          <em>This text was written by Aidan Quinlan.</em>
+        </p>
+      </div>
+
       <button class="accordion"><li>Readings</li></button>
       <div class="panel">
         <p>
