--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <ol>
       <button class="accordion"><li>Introduction</li></button>
       <div class="panel">
-        <p>
-          The web is a permeable space that in return informs our everyday lives. We log on to search for instruction and to connect with others. In doing so, we leave traces of ourselves that influence our offline world. How do we experience the internet mindfully as weaving between these spaces becomes increasingly second nature? In this course, we will explore this movement as a means of making and inquiring.
-          <br><br>
-          Students will build upon knowledge of typographic strategies and design sensibilities through the introduction of the foundational, front-end languages HTML, CSS, and JavaScript. Throughout the semester, we will consider how websites navigate, archive, and transform through projects, discussions, and guest visits that help us build criticality towards our digital and physical present and future.
-        </p>
+        <pre>
+The web is a permeable space that in return informs our everyday lives. We log on to search for instruction and to connect with others. In doing so, we leave traces of ourselves that influence our offline world. How do we experience the internet mindfully as weaving between these spaces becomes increasingly second nature? In this course, we will explore this movement as a means of making and inquiring.
+
+Students will build upon knowledge of typographic strategies and design sensibilities through the introduction of the foundational, front-end languages HTML, CSS, and JavaScript. Throughout the semester, we will consider how websites navigate, archive, and transform through projects, discussions, and guest visits that help us build criticality towards our digital and physical present and future.
+        </pre>
       </div>
 
       <button class="accordion"><li>Quick Links</li></button>
@@ -650,27 +650,27 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             <br><br>
             Some tags you might want to use:
             <code>&lt;ol&gt;</code> aka ordered list. This makes a numbered list of items. Use it like this:
-    <pre>
-      &lt;ol&gt;
-        &lt;li&gt;
-            My favorite color is blue.
-        &lt;/li&gt;
-        &lt;li&gt;
-            My second favorite color is light blue.
-        &lt;/li&gt;
-      &lt;/ol&gt;
+    <pre class="codeblock">
+  &lt;ol&gt;
+    &lt;li&gt;
+        My favorite color is blue.
+    &lt;/li&gt;
+    &lt;li&gt;
+        My second favorite color is light blue.
+    &lt;/li&gt;
+  &lt;/ol&gt;
     </pre>
           </p>
           <p>
             <code>&lt;a&gt;</code> Use an anchor tag to make a link.<br>
             For an external link, include the <code>https://</code><br>
-    <pre>
-      &lt;a href="https://www.youtube.com/watch?v=XJcXjUB0yqY"&gt;Watch my favorite music video on Youtube.&lt;/a&gt;
+    <pre class="codeblock">
+  &lt;a href="https://www.youtube.com/watch?v=XJcXjUB0yqY"&gt;Watch my favorite music video on Youtube.&lt;/a&gt;
     </pre>
           <p>
             To link to another page on your own website, just use the filepath:
-    <pre>
-      &lt;a href="my-favorite-music-video.html"&gt;Read my explanation of my favorite music video&lt;/a&gt;
+    <pre class="codeblock">
+  &lt;a href="my-favorite-music-video.html"&gt;Read my explanation of my favorite music video&lt;/a&gt;
     </pre>
           </p>
           <p>
